--- a/Aireline/nbproject/project.properties
+++ b/Aireline/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/Aireline
 excludes=
 file.reference.commons-dbutils-1.8.1.jar=C:\\Users\\hp\\Desktop\\DbUtils\\commons-dbutils-1.8.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\hp\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=../../../../Downloads/lib/jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.3.0.jar=C:\\mysql-connector-j-8.3.0.jar
 file.reference.rs2xml.jar=C:\\Users\\hp\\Downloads\\rs2xml.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-j-8.3.0.jar}:\
     ${file.reference.commons-dbutils-1.8.1.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
